kubernetes/apps/media/radarr4k/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr4k-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Radarr 4K
    gethomepage.dev/pod-selector: app.kubernetes.io/name=radarr4k
    gethomepage.dev/icon: radarr.png
spec:
  hostnames:
    - radarr4k.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: radarr4k
          port: 80
